# lexgine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Output-DiagnosticsHub.txt  README.md  lexgine.sln
api/: CMakeLists.txt  ioc.cpp  ioc.h  is_call_possible.h  lexgine_object.cpp  lexgine_object.h  link_lexgine_api.cpp  link_lexgine_api.h  link_result.cpp  link_result.h  preprocessor_tokens.h
api/core/dx/d3d12/: gpu_based_validation_settings.h
common/: CMakeLists.txt  headers_list.txt  ioc_traits.h  sources_list.txt
demos/swe_demo/: CMakeLists.txt  imgui.ini  main.cpp  swe_demo.log.html  swe_demo.log_rendering.html  swe_demo.log_worker0.html  swe_demo.log_worker1.html  swe_demo.log_worker2.html  swe_demo.log_worker3.html  swe_demo.log_worker4.html  swe_demo.log_worker5.html  swe_demo.log_worker6.html  swe_demo.log_worker7.html  swe_demo.vcxproj  swe_demo.vcxproj.filters
engine/: CMakeLists.txt  excluded_sources.txt  initializer.cpp  initializer.h
engine/common/: headers_list.txt  ioc_traits.h
engine/conversion/: class_names.cpp  class_names.h  image_loader.cpp  image_loader.h  image_loader_pool.cpp  image_loader_pool.h  ktx_image_loader.cpp  ktx_image_loader.h  lexgine_conversion_fwd.h  png_jpg_image_loader.cpp  png_jpg_image_loader.h  texture_converter.cpp  texture_converter.h
engine/core/: allocator.h  blend_descriptor.cpp  blend_descriptor.h  class_names.cpp  class_names.h  data_blob.cpp  data_blob.h  data_cache.cpp  data_cache.h  default_allocator.h  depth_stencil_descriptor.cpp  depth_stencil_descriptor.h  engine_api.h  entity.cpp  entity.h  entity_exported_interface.cpp  error_behavioral.cpp  error_behavioral.h  exception.cpp  exception.h  filter.cpp  filter.h  global_constants.h  global_settings.cpp  global_settings.h  globals.cpp  globals.h  gpu_data_blob_cache_key.cpp  gpu_data_blob_cache_key.h  gpu_data_blob_on_disk_streamed_cache.cpp  gpu_data_blob_on_disk_streamed_cache.h  initializer.cpp  initializer.h  lexgine_core_fwd.h  logging_streams.cpp  logging_streams.h  multisampling.cpp  multisampling.h  primitive_topology.h  profiling_services.cpp  (+14 more)
engine/core/concurrency/: abstract_task.cpp  abstract_task.h  hazard_pointer_pool.h  lexgine_core_concurrency_fwd.h  lock_free_queue.h  ring_buffer_task_queue.h  schedulable_task.cpp  schedulable_task.h  task_graph.cpp  task_graph.h  task_graph_node.cpp  task_graph_node.h  task_sink.cpp  task_sink.h
engine/core/dx/: d3d12_initializer.cpp  d3d12_initializer.h  lexgine_core_dx_fwd.h
engine/core/dx/d3d12/: basic_rendering_services.cpp  basic_rendering_services.h  cbv_descriptor.cpp  cbv_descriptor.h  command_allocator_ring.cpp  command_allocator_ring.h  command_list.cpp  command_list.h  command_queue.cpp  command_queue.h  constant_buffer.cpp  constant_buffer.h  constant_buffer_data_mapper.cpp  constant_buffer_data_mapper.h  constant_buffer_impl.inl  constant_buffer_impl_converters_matrix_types.inl  constant_buffer_impl_converters_scalar_types.inl  constant_buffer_impl_converters_vector_types.inl  constant_buffer_reflection.cpp  constant_buffer_reflection.h  constant_buffer_stream.cpp  constant_buffer_stream.h  d3d12_min_mag_filter_converter.inl  d3d12_pso_xml_parser.cpp  d3d12_pso_xml_parser.h  d3d12_tools.cpp  d3d12_tools.h  d3d12_type_traits.inl  d3d_data_blob.cpp  d3d_data_blob.h  debug_interface.cpp  debug_interface.h  descriptor_allocation_manager.h  descriptor_heap.cpp  descriptor_heap.h  descriptor_table_builders.cpp  descriptor_table_builders.h  device.cpp  device.h  dsv_descriptor.cpp  (+56 more)
engine/core/dx/dxcompilation/: common.h  dx_compiler_proxy.cpp  dx_compiler_proxy.h  lexgine_core_dx_dxcompilation_fwd.h  (+4 more)
engine/core/math/: box.cpp  box.h  lexgine_core_math_fwd.h  linear_algebra_types.inl  matrix_types.h  rectangle.cpp  rectangle.h  utility.cpp  utility.h  vector_types.h
engine/core/metal/: metal_tools.h
engine/core/misc/: constant_converter.h  datetime.cpp  datetime.h  flags.h  hash_value.cpp  hash_value.h  hashed_data.h  hashed_string.cpp  hashed_string.h  log.cpp  log.h  misc.cpp  misc.h  optional.h  static_template_iterator.h  static_vector.h  template_argument_iterator.h  uuid.cpp  uuid.h
engine/core/opengl45/: opengl45_tools.h
engine/core/ui/: console.cpp  console.h  profiler.cpp  profiler.h  ui_provider.h
engine/core/vulkan/: vulkan_tools.h
engine/interaction/: console_command.cpp  console_command.h  console_command_autocomplete.cpp  console_command_autocomplete.h  console_token_autocomplete.cpp  console_token_autocomplete.h  console_token_filter.cpp  console_token_filter.h
engine/osinteraction/: keyboard.h  lexgine_osinteraction_fwd.h  listener.cpp  listener.h  mouse.h  window_handler.cpp  window_handler.h
engine/osinteraction/windows/: fence_event.cpp  fence_event.h  lexgine_osinteraction_windows_fwd.h  window.cpp  window.h  window_listeners.cpp  window_listeners.h
engine/preprocessing/: common_types.py  config.json  data_class_api.hpp.template  generate_dll_interfaces.py  global_names.py  interface_creators.py  interface_ioc.py  ioc.cpp.template  ioc_api.cpp.template  ioc_api.hpp.template  ioc_api_nested.hpp.template  ioc_traits.cpp.template  ioc_traits_api.hpp.template  lexgine_utils.py  parser_helpers.py  preprocessor_tokens.h  requirements.txt  runtime_api.cpp.template  runtime_api.hpp.template  template_helpers.py  token_fetch_functions.py  util.py
engine/preprocessing/templates/: build_info.hpp.template  data_class_api.hpp.template  enum_api_hpp.template  flags_api.hpp.template  ioc_api.hpp.template  ioc_traits.cpp.template
engine/runtime/: external_parser_tokens.h  init.cpp  init.h  window.cpp  window.h
engine/scenegraph/: buffer.cpp  buffer.h  buffer_view.h  camera.cpp  camera.h  class_names.cpp  class_names.h  image.cpp  image.h  lexgine_scenegraph_fwd.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  node.cpp  node.h  pbr_material.cpp  pbr_material.h  sampler.h  scene.cpp  scene.h  scene_mesh_memory.cpp  scene_mesh_memory.h  submesh.cpp  submesh.h  texture.cpp  texture.h  vertex_buffer_view.cpp  vertex_buffer_view.h
engine/tests/: basic_tests.cpp
(+524 files in other folders)
